--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
-# Compiled Object files
-*.obj
-*.slo
-*.lo
-*.o
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-
-# Binaries
-*.exe
-*.dll
-*.lib
-*.ilk
-*.pdb
-
-# Project files
-Bin/**
-
-# Visual Studio files
-Obj/**
-*.psess
-*.vspx
-*.suo
-*.sdf
-*.opensdf
+build
+# CLion build directory
+/cmake-build-**
+build-wsl
+.vscode/
+.idea/
+venv/
+.DS_Store
